--- a/src/components/Layout/Menu/Menu.module.scss
+++ b/src/components/Layout/Menu/Menu.module.scss
@@ -1,6 +1,6 @@
 .Menu {
   background: #293a4c;
-  width: 100px;
+  width: 75px;
   display: flex;
   flex-direction: column;
   height: 100%;
@@ -10,4 +10,17 @@
   list-style: none;
   padding: 0;
   margin: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  li {
+    width: 100%;
+  }
+}
+
+.Icon {
+  font-size: 25px;
+  color: #8393a3;
+  //text-align: center;
 }
