--- a/src/components/Layout/ChatList/ChatItem/ChatItem.module.scss
+++ b/src/components/Layout/ChatList/ChatItem/ChatItem.module.scss
@@ -5,7 +5,7 @@ a {
 
 .ChatItem {
   width: 100%;
-  height: 80px;
+  height: 65px;
   //overflow: hidden;
   display: flex;
   justify-content: start;
@@ -42,7 +42,7 @@ a {
 }
 
 .ChatLeft {
-  width: 70px;
+  width: 65px;
   display: flex;
   align-items: center;
 }
@@ -50,8 +50,8 @@ a {
 .ChatImg {
   max-width: 100%;
   object-fit: cover;
-  width: 60px;
-  height: 60px;
+  width: 45px;
+  height: 45px;
   border-radius: 50%;
 }
 
@@ -59,19 +59,21 @@ a {
   flex-grow: 1;
   display: flex;
   flex-direction: column;
+  padding: 2px 0;
   justify-content: space-between;
-  margin: 4px 0;
+  margin: 0;
 }
 
 .Title {
-  font-weight: 700;
-  margin: 0 0 10px 0;
-  font-size: 18px;
+  font-weight: 500;
+  margin: 0;
+  font-size: 14px;
 }
 
 .Text {
   margin: 0;
   color: #777;
+  font-size: 13px;
 
   .sender {
     color: #44c0f0;
@@ -86,5 +88,10 @@ a {
 
   p {
     margin: 0;
+    font-size: 13px;
+  }
+
+  span {
+    font-size: 16px;
   }
 }
