--- a/src/components/UI/MenuButton/MenuButton.module.scss
+++ b/src/components/UI/MenuButton/MenuButton.module.scss
@@ -2,7 +2,7 @@
   display: inline-block;
   box-shadow: none;
   border: none;
-  padding: 15px 0;
+  height: 65px;
   width: 100%;
   cursor: pointer;
   background: #293a4c;
@@ -18,7 +18,8 @@
   color: #8393a3;
   padding: 0 10px;
   box-sizing: border-box;
-  font-size: 16px;
-  font-weight: 500;
+  font-size: 12px;
+  font-weight: 400;
   font-family: 'Roboto', sans-serif;
+  white-space: nowrap;
 }
