--- a/src/components/Layout/ChatList/ChatItem/ChatItem.module.scss
+++ b/src/components/Layout/ChatList/ChatItem/ChatItem.module.scss
@@ -39,6 +39,10 @@ a {
       color: #fff;
     }
   }
+
+  .pin {
+    color: #ddd;
+  }
 }
 
 .ChatLeft {
@@ -91,7 +95,12 @@ a {
     font-size: 13px;
   }
 
-  span {
-    font-size: 16px;
-  }
+}
+
+.pin {
+  transform: translateY(-5px) rotate(45deg);
+  transform-origin: center center;
+  display: block;
+  font-size: 18px;
+  color: #aaa;
 }
