--- a/src/components/Layout/Messages/InputChat/InputChat.module.scss
+++ b/src/components/Layout/Messages/InputChat/InputChat.module.scss
@@ -2,4 +2,56 @@
   background: #fff;
   padding: 7px 20px;
   border-top: 1px solid #707579;
+  display: flex;
+  align-items: center;
+  height: 55px;
+  box-sizing: border-box;
+}
+
+.InputText {
+  flex-grow: 1;
+  margin-left: 5px;
+}
+
+.Send {
+  border: none;
+  background: none;
+  cursor: pointer;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  display: block;
+  position: relative;
+  transition: all, .2s;
+  animation-name: fadeIn;
+  animation-duration: .2s;
+
+  &:active {
+    background: #dedede;
+  }
+
+  span {
+    font-size: 28px;
+    color: #419fd9;
+    position: absolute;
+    top: 50%;
+    left: 0;
+    font-variation-settings:
+            'FILL' 1,
+            'wght' 400,
+            'GRAD' 0,
+            'opsz' 48;
+    transform: translate(9px, -50%);
+  }
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateX(-100px);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
 }
