--- a/src/components/UI/InputMessage/InputMessage.module.scss
+++ b/src/components/UI/InputMessage/InputMessage.module.scss
@@ -1,6 +1,6 @@
 .InputMessage {
   position: relative;
-  height: 30px;
+  height: 40px;
   box-sizing: border-box;
 
   label {
@@ -22,6 +22,8 @@
     outline: none;
     position: absolute;
     font-family: 'Roboto', sans-serif;
+    font-size: 14px;
+    width: 100%;
     top: 0;
     box-sizing: border-box;
     left: 0;
