--- a/client/src/components/Layout/Menu/Menu.module.scss
+++ b/client/src/components/Layout/Menu/Menu.module.scss
@@ -4,6 +4,15 @@
   display: flex;
   flex-direction: column;
   height: 100%;
+
+  @media (max-width: 680px) {
+    flex-direction: row;
+    width: 100%;
+  }
+}
+
+.Wrapper {
+  width: 100%;
 }
 
 .List {
@@ -14,8 +23,14 @@
   flex-direction: column;
   align-items: center;
 
+  @media (max-width: 680px) {
+    flex-direction: row;
+    width: 100%;
+  }
+
   li {
     width: 100%;
+    flex-grow: 1;
   }
 }
 
