--- a/client/src/components/UI/Message/Message.module.scss
+++ b/client/src/components/UI/Message/Message.module.scss
@@ -6,12 +6,13 @@
 
   p {
     margin: 0;
-    display: inline;
     padding: 7px 5px 5px 8px;
     max-width: 40%;
     min-width: 50px;
     word-break: break-all;
     font-size: 13px;
+    display: flex;
+    flex-wrap: wrap;
   }
 }
 
@@ -63,8 +64,10 @@
 
 .Date {
   display: inline-block;
-  margin: 12px 0 0 8px;
+  margin-top: 10px;
+  padding-left: 7px;
   font-size: 11px;
   color: #aaa;
-  text-align: right;
+  flex-shrink: 0;
+  margin-left: auto;
 }
