--- a/client/src/components/Layout/Messages/HeaderMessages/HeaderMessages.module.scss
+++ b/client/src/components/Layout/Messages/HeaderMessages/HeaderMessages.module.scss
@@ -7,6 +7,13 @@
   height: 65px;
   box-sizing: border-box;
   border-bottom: 1px solid #ccc;
+
+  @media (max-width: 680px) {
+    position: relative;
+    top: 0;
+    left: 0;
+    right: 0;
+  }
 }
 
 .ChatName {
