--- a/client/src/components/Layout/Messages/InputChat/InputChat.module.scss
+++ b/client/src/components/Layout/Messages/InputChat/InputChat.module.scss
@@ -6,6 +6,13 @@
   align-items: center;
   height: 55px;
   box-sizing: border-box;
+
+  @media (max-width: 680px) {
+    position: relative;
+    bottom: 0;
+    left: 0;
+    right: 0;
+  }
 }
 
 .InputText {
