--- a/client/src/components/Layout/Messages/Messages.module.scss
+++ b/client/src/components/Layout/Messages/Messages.module.scss
@@ -1,8 +1,10 @@
 .Messages {
   display: flex;
   flex-direction: column;
-  height: 100%;
+  //height: 100%;
+  height: 100vh;
   justify-content: space-between;
+  position: relative;
 }
 
 .Alert {
