--- a/client/src/components/ModalAddContact/ModalAddContact.module.scss
+++ b/client/src/components/ModalAddContact/ModalAddContact.module.scss
@@ -1,14 +1,14 @@
-.ModalContact {
+.ModalAddContact {
   position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 500px;
-  height: 90%;
+  width: 400px;
+  height: 300px;
   background: #fff;
-  z-index: 2;
+  z-index: 6;
   box-shadow: 0 0 3px rgba(0, 0, 0, .4);
-  border-radius: 5px;
-  padding: 10px;
+  //border-radius: 5px;
+  padding: 10px 0;
   box-sizing: border-box;
 }
